cartopy/docs/v0.19/_sources/gallery/scalar_data/contour_labels.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scalar_data/contour_labels.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_scalar_data_contour_labels.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scalar_data_contour_labels.py:


Contour labels
==============

An example of adding contour labels to matplotlib contours.

.. GENERATED FROM PYTHON SOURCE LINES 8-55



.. image:: /gallery/scalar_data/images/sphx_glr_contour_labels_001.png
    :alt: contour labels
    :class: sphx-glr-single-img





.. code-block:: default

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    from waves import sample_data


    def main():
        fig = plt.figure()

        # Setup a global EckertIII map with faint coastlines.
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.EckertIII())
        ax.set_global()
        ax.coastlines('110m', alpha=0.1)

        # Use the waves example to provide some sample data, but make it
        # more dependent on y for more interesting contours.
        x, y, z = sample_data((20, 40))
        z = z * -1.5 * y

        # Add colourful filled contours.
        filled_c = ax.contourf(x, y, z, transform=ccrs.PlateCarree())

        # And black line contours.
        line_c = ax.contour(x, y, z, levels=filled_c.levels,
                            colors=['black'],
                            transform=ccrs.PlateCarree())

        # Uncomment to make the line contours invisible.
        # plt.setp(line_c.collections, visible=False)

        # Add a colorbar for the filled contour.
        fig.colorbar(filled_c, orientation='horizontal')

        # Use the line contours to place contour labels.
        ax.clabel(
            line_c,  # Typically best results when labelling line contours.
            colors=['black'],
            manual=False,  # Automatic placement vs manual placement.
            inline=True,  # Cut the line where the label will be placed.
            fmt=' {:.0f} '.format,  # Labes as integers, with some extra space.
        )

        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.365 seconds)


.. _sphx_glr_download_gallery_scalar_data_contour_labels.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: contour_labels.py <contour_labels.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: contour_labels.ipynb <contour_labels.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
